tests/errors/condition_string_type.dang
# Test conditional with string condition
let result = if ("hello") { "string condition" } else { "default" }
